git@github.com:santosh1916/JavaScript.git

--- a/html/CH10.html
+++ b/html/CH10.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1 style="text-align: center;">Chapter-10</h1>
-    <script src="/66_fetchAPI.js"></script>
+    <!-- <script src="/66_fetchAPI.js"></script> -->
+    <!-- <script src="/68_cookies.js"></script> -->
+    <script src="/69_localStorage.js"></script>
 </body>
 </html>
